# video_effects

./: Makefile  Makefile.am  Makefile.in  README.md  config.sh  configure.ac.patch  debug  gsthkeffects.c  gstmotrack.c  gstmotrack.h  gsttrack.c  gsttrack.h  hkgraphics.c  hkgraphics.h  paper.avi  patch.sh  test-fedora  track_erase.gst  track_erase.sh  track_zoom_demo.py
